Revert : all changes done for header spacing and UI issues

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -445,15 +445,9 @@
 
 .menu-overlay {
   position: fixed;
-  // height: calc(100vh - 95px);
+  height : 100%;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 10;
-  overflow-x: hidden;
-  overflow-y: auto;
-
-  &.overlay-bg{
-    background-color: $grey;
-  }
 }
 
 .menu-slider-animate {
@@ -461,9 +455,11 @@
   -webkit-transform: translate3d(0, 0, 0);
   -webkit-transition: transform 1s ease;
   transition: transform 1s ease;
-  height: 100%;
   background-color: $light-beige;
   max-width: 100%;
+  height: 100dvh;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .menu-slider {
@@ -474,7 +470,6 @@
   height: calc(100vh - #{$header-height});
   overflow: scroll;
   background-color: tint(#000, 90%);
-  top: 95px;
 }
 .op3 {
   opacity: .4;
@@ -486,10 +481,7 @@
   position: relative;
   float: left;
   width: 50%;
-
-  &.extra-bottom-padding{
-    padding-bottom: 130px;
-  }
+  
   .no-Margin {
     margin: 0;
   }
@@ -577,12 +569,12 @@
   }
 }
 
-// .lower-menu-non-inr-height{
-//   @media(max-width:767px){
-//     height: 90vh;
-//     overflow: scroll;
-//   }
-// }
+.lower-menu-non-inr-height{
+  @media(max-width:767px){
+    height: 90vh;
+    overflow: scroll;
+  }
+}
 
 // .wishlist-link {
 //   padding-left: 20px;
